- "kpss" command for panel data: improve output for the case
  where automatic lag order is selected; record $test and
  $pvalue in matrix form
- Build fixes for FreeBSD, for the non-OPENMP case, and for
  recent macOS
- "genr": get informative error messages to appear in more
  cases
- errorif() function: get this working within an mpi block,
  in which case it can be used outside of a function

2021-09-30 version 2021d
- "biprobit" command: include rho in $coeff, $stderr and
  $vcv
- New function lpsolve(): supports linear programming via
  the lpsolve library
- Prevent opening of general and console preferences
  dialogs simultaneously
- Fix partial breakage of the panel-time plotting facility
- Fix potential failure mode in echoing script input lines
  in the GUI program
- Fix a small and somewhat unlikely memory leak
- Fix a GUI build error when using GTK 2
- Fix Windows bug: greek-letter identifiers not working
  in some locales
- Fix Mac bug: binary data read/write not accessible
- Fix Linux bug: possible crash when running MPI from the
  GUI program

2021-08-30 version 2021c
- New function contains(): indicates whether a numerical
  object contains members of a specified set
- New function bcheck(): aids in handling bundle arguments
  to user-defined functions
- New command "panspec": substantially, the old "hausman"
  command under a different name; for the moment, "hausman"
  is still kept as an alias for backward compatibility
- fcstats() matrix row labels: distinguish U1 vs U2 variant
  of Theil's U statistic
- msplitby(): allow for more flexible syntax
- printing of bundles: sort members by type and key
- "print" command: make more flexible, it now includes
  most of the functionality of "eval"
- "var" command with --lagselect option: add a --minlag
  option to allow testing against 0 lags, or imposing the
  assumption that at least p > 1 lags are needed
- "set" command: new variable "datacols" to control the max