@@ -13,6 +13,7 @@ version 2021e, in progress
   cases
 - errorif() function: get this working within an mpi block,
   in which case it can be used outside of a function
+- GUI console: allow Ctrl+D to exit, if not swallowed
 
 2021-09-30 version 2021d
 - "biprobit" command: include rho in $coeff, $stderr and
